# learn-mcps

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
expense-agent/: .env.example  .gitignore  README.md  agent.py  main.py  pyproject.toml
expense-tracker/: .gitignore  README.md  cli.py  db.py  pyproject.toml  server.py
expense-tracker/tests/: test_db.py
