[project]
name = "expense-agent"
version = "0.1.0"
description = "AI agent that uses expense-tracker MCP server via natural language"
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=3.3.1",
    "mcp[cli]>=1.27.1",
    "pydantic-ai-slim[openrouter]>=1.102.0",
    "python-dotenv>=1.2.2",
    "ruff>=0.15.14",
]
