[project]
name = "expense-tracker"
version = "0.1.0"
description = "MCP server exposing expense tracking tools over stdio"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.27.1",
    "ruff>=0.15.14",
    "typer>=0.25.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
